--- a/Librus/Librus.csproj
+++ b/Librus/Librus.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Widoki\Administracja\Uzytkownicy.xaml.cs">
       <DependentUpon>Uzytkownicy.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Widoki\Administracja\UzytkownicyModelView.cs" />
     <Compile Include="Widoki\DodawanieUzytkownika\DodawanieUzytkownikaView.xaml.cs">
       <DependentUpon>DodawanieUzytkownikaView.xaml</DependentUpon>
     </Compile>
@@ -155,12 +156,17 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\favicon.ico" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Grafika\profile.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="favicon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\profile.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
