--- a/Librus/Librus.csproj
+++ b/Librus/Librus.csproj
@@ -67,8 +67,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Grafika.resx</DependentUpon>
     </Compile>
+    <Compile Include="Model\Administrator.cs" />
+    <Compile Include="Model\Nauczyciel.cs" />
+    <Compile Include="Model\Rodzic.cs" />
     <Compile Include="Model\Rola.cs" />
     <Compile Include="Model\TypRoli.cs" />
+    <Compile Include="Model\Uczen.cs" />
     <Compile Include="Model\Uzytkownik.cs" />
     <Compile Include="Model\Walidator.cs" />
     <Compile Include="Widoki\Administracja\DodawanieUzytkownika.xaml.cs">
