--- a/Librus/Librus.csproj
+++ b/Librus/Librus.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Widoki\SprawdzanieObecnosci.xaml.cs">
       <DependentUpon>SprawdzanieObecnosci.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Widoki\WyswietlanieNieobecnosci.xaml.cs">
+      <DependentUpon>WyswietlanieNieobecnosci.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Widoki\WyswietlanieOcen.xaml.cs">
       <DependentUpon>WyswietlanieOcen.xaml</DependentUpon>
     </Compile>
@@ -162,6 +165,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Widoki\SprawdzanieObecnosci.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Widoki\WyswietlanieNieobecnosci.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
