--- a/Librus/Librus.csproj
+++ b/Librus/Librus.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,7 +26,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -76,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DostepDoDanych\BazaDanych\RepozytoriumKlasB.cs" />
     <Compile Include="DostepDoDanych\IRepozytoriumObecnosci.cs" />
     <Compile Include="DostepDoDanych\IRepozytoriumUzytkownikow.cs" />
     <Compile Include="DostepDoDanych\IRepozytoriumKlas.cs" />
@@ -98,7 +99,6 @@
     <Compile Include="Model\Przedmiot.cs" />
     <Compile Include="Model\Rodzic.cs" />
     <Compile Include="Model\Rola.cs" />
-    <Compile Include="Model\TypPrzedmiotu.cs" />
     <Compile Include="Model\TypRoli.cs" />
     <Compile Include="Model\Uczen.cs" />
     <Compile Include="Model\Uzytkownik.cs" />
@@ -236,6 +236,17 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="BazaDanych\dbo.Table.sql" />
+    <Content Include="LibrusDatabase.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="LibrusDatabase_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>LibrusDatabase.mdf</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
