repozytorium obecnosci done

--- a/Librus/Librus.csproj
+++ b/Librus/Librus.csproj
@@ -77,6 +77,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DostepDoDanych\BazaDanych\RepozytoriumKlas.cs" />
+    <Compile Include="DostepDoDanych\BazaDanych\RepozytoriumObecnosci.cs" />
     <Compile Include="DostepDoDanych\BazaDanych\RepozytoriumPrzedmiotow.cs" />
     <Compile Include="DostepDoDanych\BazaDanych\RepozytoriumUzytkownikow.cs" />
     <Compile Include="DostepDoDanych\IRepozytoriumObecnosci.cs" />
