--- a/Librus/App.config
+++ b/Librus/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="database" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\aneta\Desktop\Librus\Librus\LibrusDatabase.mdf;Integrated Security=True" />
+    <add name="database" connectionString="Data Source=(localdb)\v12.0;Initial Catalog=Librus;Integrated Security=True" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
