--- a/Librus/Librus.csproj
+++ b/Librus/Librus.csproj
@@ -57,6 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
@@ -103,10 +104,16 @@
     <Compile Include="Model\Przedmiot.cs" />
     <Compile Include="Model\Rodzic.cs" />
     <Compile Include="Model\Rola.cs" />
+    <Compile Include="Model\SerwisAplikacyjny.cs" />
     <Compile Include="Model\TypRoli.cs" />
     <Compile Include="Model\Uczen.cs" />
     <Compile Include="Model\Uzytkownik.cs" />
     <Compile Include="Model\Walidator.cs" />
+    <Compile Include="Resources\BledyWalidacji.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BledyWalidacji.resx</DependentUpon>
+    </Compile>
     <Compile Include="Widoki\Administracja\DodawanieUzytkownika.xaml.cs">
       <DependentUpon>DodawanieUzytkownika.xaml</DependentUpon>
     </Compile>
@@ -217,6 +224,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\BledyWalidacji.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>BledyWalidacji.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -224,7 +235,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\favicon.ico" />
@@ -256,16 +269,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Content Include="BazaDanych\dbo.Table.sql" />
-    <Content Include="LibrusDatabase.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="LibrusDatabase_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>LibrusDatabase.mdf</DependentUpon>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
